--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Sabit Rakhim",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^1.3.3",
     "express": "^4.17.1",
     "mongoose": "^5.7.4",
     "nodemon": "^1.19.3",
