--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
@@ -36,8 +37,8 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^9.0.0",
-    "eslint": "^5.16.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.5.1",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-wesbos": "0.0.19",
