--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.20.0",
+    "lodash": "^4.17.15",
     "materialize-css": "^1.0.0-rc.2",
     "prettier-eslint": "^9.0.0",
     "react": "^16.10.2",
